...
    <string name="action_ok">OK</string>
    <string name="delete_comment_waring">This comment will be deleted, are you sure to do that?
    </string>
    <string name="comment_update_complete">Comment updated</string>
    <string name="api_error_429">You are doing too much work! Slow down for a while</string>
    <string name="or_loging_with_guest">or</string>
    <string name="guest_button_text">Use as guest</string>
    <string name="create_account_label">Create Dribbble account</string>
    <string name="guest_label">Guest?</string>
    <string name="add_to_bucket_fragment_create_new_bucket">Create new bucket</string>
    <string name="remove_from_bucket_fragment_remove">Remove shot from the above buckets</string>
    <string name="empty_bucket_item_description">No shots in bucket image.</string>
    <string name="loading">Loading</string>
...
